# jetson_llm_harness

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README.txt
docs/: DEVELOPER_NOTES.md  POSTURE_SYSTEM_SETUP.md
experiments/observer/: main.cpp  publisher.hpp  subscriber.hpp
jetson/camera/: README.txt  force_imx219_cam1_dtb.sh
jetson/inference/: README.txt  mobilenetv2_camera_demo.py  pose_camera_demo.py  posture_history.py
jetson/services/: README.md  posture-runtime.env.example  run_posture_runtime.sh
jetson/web/: posture_dashboard.py
scripts/: pin7_buzzer_test.py
src/: consumers.hpp  main.cpp  messages.hpp  mpu6050.hpp  oled_demo.cpp  oled_display.hpp  producers.hpp  ringbuffer.hpp  state.hpp
